package pt.ipp.isep.dei.dto;

public class BuildRailwayLineRequestDTO {
    public BuildRailwayLineRequestDTO() { throw new UnsupportedOperationException("Not implemented yet"); }
    public String startStationName;
    public String endStationName;
    public double confirmedCost;
}
