package pt.ipp.isep.dei.dto;

import java.util.List;

public class PathCostDTO {
    public PathCostDTO() { throw new UnsupportedOperationException("Not implemented yet"); }
    public List<Object> path;
    public double totalCost;
    public double distance;
}
