package pt.ipp.isep.dei.service;

import java.util.Optional;

import pt.ipp.isep.dei.domain.Path;
import pt.ipp.isep.dei.domain.map.Station;

public class PathFinderService {
    public Optional<Path> findPath(Station startStation, Station endStation) {
        throw new UnsupportedOperationException("Not supported yet.");
    }
}
