package pt.ipp.isep.dei.ui;

import pt.ipp.isep.dei.controller.BuildRailwayLineController;
import pt.ipp.isep.dei.domain.map.Station;

// TODO: Add necessary imports (e.g., domain.Station)

public class BuildRailwayLineUI implements Runnable {

    private final BuildRailwayLineController controller = new BuildRailwayLineController();

    public BuildRailwayLineUI() {
    }

    @Override
    public void run() {
        throw new UnsupportedOperationException("Not supported yet.");
    }

    private void buildRailwayLine() {
        throw new UnsupportedOperationException("Not implemented yet.");
    }

    private void saveSelectedStartStation(Station station) {
        throw new UnsupportedOperationException("Not implemented yet.");
    }

    private void saveSelectedEndStation(Station station) {
        throw new UnsupportedOperationException("Not implemented yet.");
    }
}
